feat: implement card spawning system for duelists' hands and battlefields